Fixed blue checkbox stretching on mobile devices

--- a/html/style.css
+++ b/html/style.css
@@ -576,8 +576,9 @@ table.infoSectionTable tr td {
 }
 
 .settingsCheckbox {
-    width: calc( 20px * var(--SCALE));
+    width: calc( 12px * var(--SCALE));
     height: calc( 11px * var(--SCALE));
+    margin-left: calc( 5px * var(--SCALE));
     margin-right: calc( 5px * var(--SCALE));
     background-image: url('images/box-empty.png');
     background-repeat: no-repeat;
